k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viewtherecipe-frontend-ingress
  namespace: savetherecipe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - savetherecipe.golovanov.me
      secretName: viewtherecipe-frontend-tls
  rules:
    - host: savetherecipe.golovanov.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: viewtherecipe
                port:
                  number: 11456
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viewtherecipe-frontend
                port:
                  number: 11457
